[gd_scene load_steps=68 format=2]

[ext_resource path="res://graphics/try_to_salvage_player.svg" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://graphics/render_player/walk.png0026.png" type="Texture" id=3]
[ext_resource path="res://graphics/render_player/walk.png0016.png" type="Texture" id=4]
[ext_resource path="res://graphics/render_player/walk.png0022.png" type="Texture" id=5]
[ext_resource path="res://graphics/render_player/walk.png0027.png" type="Texture" id=6]
[ext_resource path="res://graphics/render_player/walk.png0011.png" type="Texture" id=7]
[ext_resource path="res://graphics/render_player/walk.png0010.png" type="Texture" id=8]
[ext_resource path="res://graphics/render_player/walk.png0019.png" type="Texture" id=9]
[ext_resource path="res://graphics/render_player/walk.png0024.png" type="Texture" id=10]
[ext_resource path="res://graphics/render_player/walk.png0025.png" type="Texture" id=11]
[ext_resource path="res://graphics/render_player/walk.png0018.png" type="Texture" id=12]
[ext_resource path="res://graphics/render_player/walk.png0028.png" type="Texture" id=13]
[ext_resource path="res://graphics/render_player/walk.png0013.png" type="Texture" id=14]
[ext_resource path="res://graphics/render_player/walk.png0020.png" type="Texture" id=15]
[ext_resource path="res://graphics/render_player/walk.png0017.png" type="Texture" id=16]
[ext_resource path="res://graphics/render_player/walk.png0012.png" type="Texture" id=17]
[ext_resource path="res://graphics/render_player/walk.png0021.png" type="Texture" id=18]
[ext_resource path="res://graphics/render_player/walk.png0029.png" type="Texture" id=19]
[ext_resource path="res://graphics/render_player/walk.png0023.png" type="Texture" id=20]
[ext_resource path="res://graphics/render_player/walk.png0014.png" type="Texture" id=21]
[ext_resource path="res://graphics/render_player/walk.png0015.png" type="Texture" id=22]
[ext_resource path="res://graphics/render_player/walk_shoot.png0010.png" type="Texture" id=23]
[ext_resource path="res://graphics/render_player/walk_shoot.png0012.png" type="Texture" id=24]
[ext_resource path="res://graphics/render_player/walk_shoot.png0013.png" type="Texture" id=25]
[ext_resource path="res://graphics/render_player/walk_shoot.png0014.png" type="Texture" id=26]
[ext_resource path="res://graphics/render_player/walk_shoot.png0015.png" type="Texture" id=27]
[ext_resource path="res://graphics/render_player/walk_shoot.png0017.png" type="Texture" id=28]
[ext_resource path="res://graphics/render_player/walk_shoot.png0018.png" type="Texture" id=29]
[ext_resource path="res://graphics/render_player/walk_shoot.png0011.png" type="Texture" id=30]
[ext_resource path="res://graphics/render_player/walk_shoot.png0016.png" type="Texture" id=31]
[ext_resource path="res://graphics/render_player/walk_shoot.png0021.png" type="Texture" id=32]
[ext_resource path="res://graphics/render_player/walk_shoot.png0019.png" type="Texture" id=33]
[ext_resource path="res://graphics/render_player/walk_shoot.png0022.png" type="Texture" id=34]
[ext_resource path="res://graphics/render_player/walk_shoot.png0020.png" type="Texture" id=35]
[ext_resource path="res://graphics/render_player/walk_shoot.png0023.png" type="Texture" id=36]
[ext_resource path="res://graphics/render_player/walk_shoot.png0027.png" type="Texture" id=37]
[ext_resource path="res://graphics/render_player/walk_shoot.png0025.png" type="Texture" id=38]
[ext_resource path="res://graphics/render_player/walk_shoot.png0028.png" type="Texture" id=39]
[ext_resource path="res://graphics/render_player/walk_shoot.png0026.png" type="Texture" id=40]
[ext_resource path="res://graphics/render_player/walk_shoot.png0024.png" type="Texture" id=41]
[ext_resource path="res://graphics/render_player/walk_shoot.png0029.png" type="Texture" id=42]
[ext_resource path="res://graphics/render_player/jump.png0003.png" type="Texture" id=43]
[ext_resource path="res://graphics/render_player/jump.png0008.png" type="Texture" id=44]
[ext_resource path="res://graphics/render_player/jump.png0007.png" type="Texture" id=45]
[ext_resource path="res://graphics/render_player/jump.png0014.png" type="Texture" id=46]
[ext_resource path="res://graphics/render_player/jump.png0001.png" type="Texture" id=47]
[ext_resource path="res://graphics/render_player/jump.png0010.png" type="Texture" id=48]
[ext_resource path="res://graphics/render_player/jump.png0000.png" type="Texture" id=49]
[ext_resource path="res://graphics/render_player/jump.png0005.png" type="Texture" id=50]
[ext_resource path="res://graphics/render_player/jump.png0002.png" type="Texture" id=51]
[ext_resource path="res://graphics/render_player/jump.png0004.png" type="Texture" id=52]
[ext_resource path="res://graphics/render_player/jump.png0009.png" type="Texture" id=53]
[ext_resource path="res://graphics/render_player/jump.png0012.png" type="Texture" id=54]
[ext_resource path="res://graphics/render_player/jump.png0015.png" type="Texture" id=55]
[ext_resource path="res://graphics/render_player/jump.png0011.png" type="Texture" id=56]
[ext_resource path="res://graphics/render_player/jump.png0013.png" type="Texture" id=57]
[ext_resource path="res://graphics/render_player/jump.png0006.png" type="Texture" id=58]
[ext_resource path="res://lmms/heartbeat_4l.wav" type="AudioStream" id=59]
[ext_resource path="res://lmms/heartbeat_1.wav" type="AudioStream" id=60]
[ext_resource path="res://lmms/heartbeat_2.wav" type="AudioStream" id=61]
[ext_resource path="res://lmms/heartbeat_3.wav" type="AudioStream" id=62]

[sub_resource type="Animation" id=1]
resource_name = "Walk"
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 5 ), ExtResource( 20 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 30 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 31 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 41 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 37 ), ExtResource( 39 ), ExtResource( 42 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 49 ), ExtResource( 47 ), ExtResource( 51 ), ExtResource( 43 ), ExtResource( 52 ), ExtResource( 50 ), ExtResource( 58 ), ExtResource( 45 ), ExtResource( 44 ), ExtResource( 53 ), ExtResource( 48 ), ExtResource( 56 ), ExtResource( 54 ), ExtResource( 57 ), ExtResource( 46 ), ExtResource( 55 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "Shoeprints"
length = 0.8
loop = true
step = 0.042
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.252, 0.672 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoe_right"
}, {
"args": [  ],
"method": "shoe_left"
} ]
}

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 11
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="icon"]
autoplay = "Walk"
anims/Walk = SubResource( 1 )

[node name="Walk" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
frame = 3
playing = true

[node name="WalkShoot" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
frame = 5
playing = true

[node name="ShootSpawn" type="Position2D" parent="."]
position = Vector2( -0.386993, 21.0989 )

[node name="Jump" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 4 )
frame = 15
playing = true

[node name="ShoeLeft" type="Position2D" parent="."]
position = Vector2( -7.52036, 48.2295 )

[node name="ShoeRight" type="Position2D" parent="."]
position = Vector2( 6.79855, 48.2295 )

[node name="ShoePrints" type="AnimationPlayer" parent="."]
autoplay = "Shoeprints"
anims/Shoeprints = SubResource( 5 )

[node name="Heart1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 60 )
bus = "HeartHit"

[node name="Heart2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 61 )
bus = "HeartHit"

[node name="Heart3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 62 )
bus = "HeartHit"

[node name="Heart4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 59 )
bus = "HeartHit"
